PZS-NG CHANGELOG
----------------

v1.0.4  --> 1.0.X  :
		- added cr0que's fix for a bug regarding mp3 releases with subdirs, and how the
		  the symlinks got puckered.
		- added meij's plugin-rewrite of psxc-imdb.tcl with support for directed imdb
		  lookups (previously only the "main" channel(s) would get the result).
		- fixed the malloc()/free() bug introduced with v1.0.3 completely.
		- fixed lastbind problem in GameFAQ and TVRage plugins with encrypted sitechans.
v1.0.3  --> 1.0.4  : (r2149)
		- fixed a malloc()/free() bug introduced with v1.0.3 that made the zs segfault.
		- don't print zipscript_header if it's zero in length.
		- do not extract nfo from zip if an nfo already exists in dir.
		- added more .diz types to be recognized.
		- updated meij's GameFAQ plugin to v.1.5
		- updated meij's TVRage plugin to v1.3
v1.0.2  --> 1.0.3  : (r2137)
		- added meij's TVRage plugin (v1.1)
		- added support for showing pid of users in sitewho (only in --raw, non-ss5 mode)
		- added support for denying resumed/overwritten sfv files.
		- added support for sorting mp3 by language.
		- New option in zsconfig.h - deny_resume_sfv - deny resumed/overwritten sfv files
		- New option in zsconfig.h - audio_language_sort - sort mp3 by language
		- New option in zsconfig.h - audio_language_path - where to put mp3 symlinks
v1.0.1b --> 1.0.2  : (r2130)
		- Fixed a coredump on amd64 in mp3info.
		- Fixed a coredump on amd64 in sitewho.
		- Made cleanup more general - previously it would only cleanup broken.
		  indicators or mp3 symlinks.
		- Small fix in sitewho (reading-config bug, affecting paths and names with =).
		- Small bugfix for imdb-nuker.
		- Fixed statsection support for allup/alldn/etc.
		- Fixed vars for pre announce.
		- Fix: dont show user/group stats if max_*_in_top == 0.
		- Fixed bug 394 - racestats seems to wrap over when alup is over 4TiB.
		- Fixed small compile error with audiosort and some obscure option.